--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -8,11 +8,11 @@ plugins {
 }
 
 android {
-    namespace 'com.android.amazing_android_weather'
+    namespace 'com.gyms.kollek'
     compileSdk 32
 
     defaultConfig {
-        applicationId "com.android.amazing_android_weather"
+        applicationId "com.gyms.kollek"
         minSdk 23
         targetSdk 32
         versionCode 1
