--- a/android/settings.gradle
+++ b/android/settings.gradle
@@ -12,5 +12,5 @@ dependencyResolutionManagement {
         mavenCentral()
     }
 }
-rootProject.name = "amazing-android-weather"
+rootProject.name = "KolleK"
 include ':app'
