--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -71,7 +71,7 @@ dependencies {
     implementation "androidx.compose.foundation:foundation:1.3.1"
 
     implementation "androidx.compose.ui:ui:$compose_version"
-    //implementation "androidx.compose.foundation:foundation:$compose_version"
+    implementation "androidx.compose.foundation:foundation:1.0.0-alpha08"
     implementation "androidx.compose.material:material:$compose_version"
 
 
